Gizmo does not show unless screen is updated(?) for right click select. #96701

Closed
opened 2022-03-22 08:24:09 +01:00 by Rey Leonard M. Amorato · 8 comments

System Information
Operating system: Linux-5.4.0-58-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.43.0, 5.4.0-58-generic, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.3.0-devel

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-21 15:38, hash: 8530e48f86
Worked: version: 3.1.0

Caused by 4986f71848

Short description of error
Gizmo does not show unless screen is updated i.e., scrolling or panning view when using right click select. Left click select works fine.
GIF.gif

Exact steps for others to reproduce the error

  • Open blender and enable "Move" under Object Gizmos
  • Open preferences choose "Right" under Keymap>Select with Mouse Button.
  • Go into edit mode
  • make any selection, gizmo will not appear unless you pan or zoom.
    • this is especially obvious if you press {key RMB}, hold down for a while and then release {key RMB} (if press/release is more or less immediate, the gizmo will show)

Attached is a screencast of the bug.
Screencast_2022-03-22_15-12-14.mkv

**System Information** Operating system: Linux-5.4.0-58-generic-x86_64-with-glibc2.31 64 Bits Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.43.0, 5.4.0-58-generic, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.3.0-devel **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-21 15:38, hash: `8530e48f86` Worked: version: 3.1.0 Caused by 4986f71848 **Short description of error** Gizmo does not show unless screen is updated i.e., scrolling or panning view when using right click select. Left click select works fine. ![GIF.gif](https://archive.blender.org/developer/F12940495/GIF.gif) **Exact steps for others to reproduce the error** - Open blender and enable "Move" under Object Gizmos - Open preferences choose "Right" under Keymap>Select with Mouse Button. - Go into edit mode - make any selection, gizmo will not appear unless you pan or zoom. - this is especially obvious if you press {key RMB}, **hold down for a while** and then release {key RMB} (if press/release is more or less immediate, the gizmo will show) Attached is a screencast of the bug. [Screencast_2022-03-22_15-12-14.mkv](https://archive.blender.org/developer/F12939480/Screencast_2022-03-22_15-12-14.mkv)

Added subscriber: @RL

Added subscriber: @RL

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report.
It doesn't happen in all cases, but I can confirm it by trying to select other vertices.
I also noticed that version 3.1.0 does not have this problem.

Note: The attached video appears to be corrupted as I cannot view it.

Thanks for the report. It doesn't happen in all cases, but I can confirm it by trying to select other vertices. I also noticed that version 3.1.0 does not have this problem. Note: The attached video appears to be corrupted as I cannot view it.
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Think this deserves High priority, caused by 4986f71848

CC @ideasman42

Think this deserves High priority, caused by 4986f71848 CC @ideasman42
Philipp Oeser changed title from Gizmo does not show unless screen is updated(?) for right click select. to Regression: Gizmo does not show unless screen is updated(?) for right click select. 2022-03-25 15:54:14 +01:00
Philipp Oeser changed title from Regression: Gizmo does not show unless screen is updated(?) for right click select. to Gizmo does not show unless screen is updated(?) for right click select. 2022-03-28 11:20:20 +02:00

This issue was referenced by d4bdf21929

This issue was referenced by d4bdf2192964f786520c774d1a2ee44617302bc1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-03-29 07:57:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96701
No description provided.