Fix T96701: RMB select fails to show gizmo on mouse button release

Regression in [0] which removed a special check when tweak events ended.
Add a similar check for drag events that runs drag is disabled in the
main event handling loop.

[0]: 4986f718482b061082936f1f6aa13929741093a2